--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     },
     "dependencies": {
         "connect": "2.7.x"
+    },
+    "scripts": {
+        "postinstall": "cd ./modules/src/; ../../node_modules/shifter/bin/shifter --walk --build-dir=../build"
     }
 }
