Fixed a relative path in the build command for Heroku.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
         "shifter": "latest"
     },
     "scripts": {
-        "postinstall": "cd ./src/; ../../node_modules/shifter/bin/shifter --walk --build-dir=../build"
+        "postinstall": "cd ./src/; ../node_modules/shifter/bin/shifter --walk --build-dir=../build"
     }
 }
